--- a/SCA-TPmoyennes/SCA-TPmoyennes.csproj
+++ b/SCA-TPmoyennes/SCA-TPmoyennes.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>HNI_TPmoyennes</RootNamespace>
+    <RootNamespace>SCA_TPmoyennes</RootNamespace>
   </PropertyGroup>
 
 </Project>
